<resources>
    <!-- Login Activity -->
    <string name="app_name">Pratic</string>
    <string name="login_button">Sign in</string>
    <string name="permission_denied">Sorry ! Permission Denied</string>
    <string name="latest_updates">Latest Updates</string>
    <string name="not_found_wifi">You haven\'t an Wifi Connection :( </string>

    <!-- Home Activity -->
    <string name="home_logout">Sign out</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="home_developed">Ninise 2016</string>
    <string name="back_pressed">Please click BACK again to exit</string>
    <string name="home_post_tweet_hint">What\'s happening?</string>
    <string name="homePostBtn">Tweet</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="tweet_posted">Tweet posted</string>
    <string name="tweet_not_posted">Tweet not posted</string>
    <string name="progress_dialog_loading">Loading recent tweets…</string>
    <string name="progress_dialog_loadTitle">Loading…</string>

    <!-- Settings Activity -->
    <string name="settings_github">Check for app updates</string>
    <string name="settings_network">App updates</string>
    <string name="settings_save_btn">Save</string>
    <string name="settings_title">Settings</string>
    <string name="settings_changes_saved">Changes saved</string>
    <string name="settings_changes_not_saved">Changes not saved</string>

    <!-- About Activity -->
    <string name="about_developer">Created by Ninise</string>
    <string name="about_version">Version 0.9</string>
    <string name="about_ok">OK</string>
    <string name="search_hint">Search</string>
    <string name="to_source">To source</string>
    <string name="settings_count_github">Count of posts</string>
    <string name="settings_tweet">Tweets display</string>
    <string name="settings_tweets_count">Count of tweets</string>
</resources>
