<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include android:id="@+id/settingsToolBar"
             layout="@layout/home_tool_bar"/>

    <TextView
        android:id="@+id/settingsNetworkTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingsToolBar"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/settings_network"
        android:textSize="30sp"
        style="?android:listSeparatorTextViewStyle"/>

    <TextView
        android:id="@+id/settingsUpdatesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingsNetworkTextView"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/settings_github"
        style="@style/RobotoTextViewStyle"
        />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/settingsUpdatesSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@id/settingsNetworkTextView"/>

    <Button
        android:id="@+id/settingsSaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentBottom="true"
        android:text="@string/settings_save_btn"
        style="@style/RobotoButtonStyle"/>

</RelativeLayout>